--- a/schedule.html
+++ b/schedule.html
@@ -150,15 +150,15 @@
                     <h2 class="text-2xl font-bold mb-4 text-center text-white">Secondary Stage</h2>
                     <div class="space-y-4">
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">08h</p>
+                            <p class="text-lg font-semibold text-yellow-400">08:00</p>
                             <p class="font-medium text-white">Palco Fechado</p>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">9h20</p>
+                            <p class="text-lg font-semibold text-yellow-400">09:20</p>
                             <p class="font-medium text-white">Palco Fechado</p>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">09h30 - 10:10</p>
+                            <p class="text-lg font-semibold text-yellow-400">09:30 - 10:10</p>
                             <p class="font-medium text-white">Palco Fechado</p>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
