--- a/speakers.html
+++ b/speakers.html
@@ -151,7 +151,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Lucas Reis</h3>
                     <p class="text-gray-300 mb-4">Visualização de modelos de machine learning não-supervisionados
                         baseados em distância para detecção de anomalias</p>
-                    <a href="speakers/Lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
+                    <a href="speakers/lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
                         →</a>
                 </div>
 
