fix schedule remove speaker

--- a/schedule.html
+++ b/schedule.html
@@ -185,8 +185,8 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">14:00 - 14:50</p>
-                            <p class="font-medium text-white">Exploração de vulnerabilidades de autorização em empresas de escala global</p>
-                            <p class="text-sm text-gray-300">Paulo Raphael</p>
+                            <p class="font-medium text-white">To be announced</p>
+                            <p class="text-sm text-gray-300">TBA</p>
                             <a href="speakers/paulo-raphael.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         
