--- a/schedule.html
+++ b/schedule.html
@@ -169,9 +169,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:00 - 11:50</p>
-                            <p class="font-medium text-white">Da Análise ao Ataque: Usando Data Science para Antecipar Ameaças</p>
-                            <p class="text-sm text-gray-300">Lucas Zanoni</p>
-                            <a href="speakers/lucas-zanoni.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="font-medium text-white">TBA</p>
+                            <p class="text-sm text-gray-300">TBA</p>
+                            <a href="" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
