--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
 		<!-- Header -->
 		<header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
-			<a href="index.html">
+			<a href="/index.html">
 				<img src="images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
 			</a>
 			<!-- Menu para desktop -->
