fix speakers and schedule

--- a/schedule.html
+++ b/schedule.html
@@ -159,7 +159,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">09:30 - 10:10</p>
-                            <p class="font-medium text-white">Palco Fechado</p>
+                            <p class="font-medium text-white">Cortando o mal pela raiz: modelagem de ameaças</p>
+                            <p class="text-sm text-gray-300">Felipe Navarro</p>
+                            <a href="speakers/felipe-navarro.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">10:10 - 11:00</p>
@@ -169,9 +171,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:00 - 11:50</p>
-                            <p class="font-medium text-white">TBA</p>
-                            <p class="text-sm text-gray-300">TBA</p>
-                            <a href="" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="font-medium text-white">Persistência via Cloudf̶l̶a̶r̶e̶: Anatomia de um Ataque do Ransomware Akira</p>
+                            <p class="text-sm text-gray-300">Jefferson Macedo</p>
+                            <a href="speakers/jefferson-macedo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
@@ -185,13 +187,6 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">14:00 - 14:50</p>
-                            <p class="font-medium text-white">To be announced</p>
-                            <p class="text-sm text-gray-300">TBA</p>
-                            <a href="speakers/paulo-raphael.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
-                        </div>
-                        
-                        <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">14:50 - 15:40</p>
                             <p class="font-medium text-white">Privacidade, open-source e descentralização: Nym mixnet e a próxima geração de infraestrutura de privacidade</p>
                             <p class="text-sm text-gray-300">Pedro Sydenstricker</p>
                             <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
@@ -207,6 +202,10 @@
                             <p class="font-medium text-white">Visualização de modelos de machine learning não-supervisionados baseados em distância para detecção de anomalias</p>
                             <p class="text-sm text-gray-300">Lucas Reis</p>
                             <a href="speakers/lucas-reis.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                        </div>
+                        <div class="border-b border-gray-600 pb-4">
+                            <p class="text-lg font-semibold text-yellow-400">16:30</p>
+                            <p class="font-medium text-white">Palco Fechado</p>
                         </div>
                     </div>
                 </div>
