--- a/speakers.html
+++ b/speakers.html
@@ -88,7 +88,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Abid Lohan</h3>
                     <p class="text-gray-300 mb-4">Game Hacking: do Zero ao Kernel</p>
                     <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        →</a>
+                        detalhes →</a>
                 </div>
 
                 <!-- Lucas Carmo -->
@@ -97,7 +97,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Lucas Carmo</h3>
                     <p class="text-gray-300 mb-4">The Shadow Behind Red Team Radiance</p>
                     <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        →</a>
+                        detalhes →</a>
                 </div>
 
                 <!-- José Luiz -->
@@ -106,7 +106,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">José Luiz</h3>
                     <p class="text-gray-300 mb-4">Malwares & EDRs</p>
                     <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        →</a>
+                        detalhes →</a>
                 </div>
 
                 <!-- Heitor Gouvêa -->
@@ -128,13 +128,6 @@
                         detalhes →</a>
                 </div>
 
-                <!-- Bruno Dantas
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
-                    <h3 class="text-2xl font-bold text-white mb-2">Bruno Dantas</h3>
-                    <p class="text-gray-300 mb-4">Extensões malvadas: entendendo e se defendendo das brechas de segurança no VS Code</p>
-                    <a href="speakers/bruno-dantas.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
-                </div> -->
-
                 <!-- Nelson Brito -->
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
@@ -142,7 +135,7 @@
                     <p class="text-gray-300 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!
                     </p>
                     <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        →</a>
+                        detalhes →</a>
                 </div>
 
                 <!-- Lucas Reis -->
@@ -152,15 +145,9 @@
                     <p class="text-gray-300 mb-4">Visualização de modelos de machine learning não-supervisionados
                         baseados em distância para detecção de anomalias</p>
                     <a href="speakers/lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        →</a>
+                        detalhes →</a>
                 </div>
 
-                <!-- Lucas Zanoni
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
-                    <h3 class="text-2xl font-bold text-white mb-2">Lucas Zanoni</h3>
-                    <p class="text-gray-300 mb-4">Da Análise ao Ataque: Usando Data Science para Antecipar Ameaças</p>
-                    <a href="speakers/lucas-zanoni.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
-                </div> -->
 
                 <!-- Rodrigo Ferreira-->
                 <div
@@ -172,13 +159,6 @@
                         detalhes →</a>
                 </div>
 
-                <!-- Paulo Raphael
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
-                    <h3 class="text-2xl font-bold text-white mb-2">Paulo Raphael</h3>
-                    <p class="text-gray-300 mb-4">Exploração de vulnerabilidades de autorização em empresas de escala global</p>
-                    <a href="speakers/paulo-raphael.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
-                </div> -->
-
                 <!-- Luiz Custódio -->
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
@@ -189,12 +169,6 @@
                         detalhes →</a>
                 </div>
 
-                <!-- Marcelo Almeida
-                <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
-                    <h3 class="text-2xl font-bold text-white mb-2">Marcelo Almeida</h3>
-                    <p class="text-gray-300 mb-4">Segurança em Aplicações Serverless</p>
-                    <a href="speakers/marcelo-almeida.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
-                </div> -->
                 <!-- Pedro Sydenstricker -->
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
