--- a/speakers/felipe-navarro.html
+++ b/speakers/felipe-navarro.html
@@ -40,7 +40,7 @@
         <!-- Header -->
         <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
             <a href="/index.html">
-                <img src="../images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
+                <img src="../../images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
             </a>
             <!-- Menu para desktop -->
             <nav class="hidden md:flex space-x-4 text-white text-lg">
@@ -73,26 +73,25 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/jose-luiz.png" alt="José Luiz" class="w-full h-full object-cover">
+                        <img src="../images/speakers/felipe-navarro.jpg" alt="Felipe Navarro" class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">José Luiz</h1>
-                    <a href="https://www.linkedin.com/in/jos%C3%A9-oliveira-83534b2a7/" class="text-lg text-white">https://www.linkedin.com/in/jos%C3%A9-oliveira-83534b2a7/</a>
+                    <h1 class="text-4xl font-bold text-white mb-2">Felipe Navarro</h1>
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Malwares & EDRs</h2>
-                    <p class="text-lg text-white mb-4">14:50 - Palco Principal</p>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Cortando o mal pela raiz: modelagem de ameaças</h2>
+                    <p class="text-lg text-white mb-4">09:30 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Nessa palestra vamos estudar as principais técnicas de desenvolvimento de malware focado em Windows, aprendendo como escrever um malware "stealth" e descobrir como as soluções de Antivírus realizam a detecção e classificação do malware.
-                            Vamos abordar técnicas como API unhooking, syscalls diretas e criptografia de código, assinatura de código. Por fim, vamos ver como criar o seu próprio EDR, escrevendo um driver com capacidade de injeção de DLL e analise de syscalls.</p>
+                        <p class="mb-6">Nessa palestra, vamos explorar como a modelagem de ameaças pode ser um aliado no reforço à segurança desde o início do ciclo de desenvolvimento.</p>
                     </div>
                 </div>
 
                 <div>
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About José Luiz</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Felipe Navarro</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Pentester, pesquisador de vulnerabilidades de CPU, apaixonado por low level</p>
-                    </div>
+                        <p class="mb-6">Felipe Navarro é Assessor de TI do Centro de Excelência em Segurança Digital do Banco do Brasil. Atualmente atua como DevSecOps no time de prospecção de novos produtos, incorporando a segurança em todo o ciclo de desenvolvimento. Entre suas principais responsabilidades estão a modelagem de ameaças e o desenvolvimento de ferramentas de análise de criticidade de endpoints.
+
+                        </div>
                 </div>
             </div>
 
