--- a/speakers/heitor-gouvea.html
+++ b/speakers/heitor-gouvea.html
@@ -77,7 +77,7 @@
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Automatic detection of fake profiles on social networks</h2>
-                    <p class="text-lg text-white mb-4">10:20 - Palco Secundário</p>
+                    <p class="text-lg text-white mb-4">10:10 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Nesta palestra será discutido a atual problematica ao redor de perfis falsos em redes sociais (que são usados para SPAM, fraudes financeiras e diversas outras situações de impacto negativos) e uma demonstração de algoritmo para detecção automática destes perfis. Será apresentado um estudo de caso aplicado no Instagram, mas as premissas básicas podem ser aplicadas em outros contextos que são semelhantes.</p>
                     </div>
@@ -85,9 +85,9 @@
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">An approach of FBP for rapid development of offensive security tools</h2>
-                    <p class="text-lg text-white mb-4">14:20 - Palco Principal</p>
+                    <p class="text-lg text-white mb-4">15:40 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6"></p>
+                        <p class="mb-6">Em sua palestra "An approach of FBP for rapid development of offensive security tools" irá mostrar o uso de um paradigma de programação chamado Flow Based Programming (FBP), e como usou ele para criar um framework para desenvolvimento rápido de ferramentas de segurança ofensiva. Possibilitando realizar a criação de exploits, módulos auxiliares, checkers e etc, que utilizou para construir um EASM (External Attack Surface Management) que o ajudou a encontrar diversas falhas em programas de Bug Bounty de empresas como: UOL, Activision, Mercado Libre, Adobe e outras.</p>
                     </div>
                 </div>
 
