--- a/speakers/jefferson-macedo.html
+++ b/speakers/jefferson-macedo.html
@@ -81,7 +81,7 @@
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Persistência via Cloudf̶l̶a̶r̶e̶: Anatomia de um Ataque do Ransomware Akira</h2>
-                    <p class="text-lg text-white mb-4">15:10 - Palco Principal</p>
+                    <p class="text-lg text-white mb-4">11:00 - Sala Secundária</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Nesta sessão, apresentarei os detalhes de um incidente real causado por um dos grupos de ransomware mais temidos, destacando uma técnica de persistência até então pouco documentada: o uso de um provedor de CDN para manter o controle do ambiente comprometido. Compartilharei lições práticas a partir da resposta ao incidente e métodos para detectar e mitigar essa ameaça, bem como fortalecer a segurança contra ataques avançados como esses.</p>
                     </div>
