--- a/speakers/lucas-reis.html
+++ b/speakers/lucas-reis.html
@@ -81,7 +81,7 @@
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Visualização de modelos de machine learning não-supervisionados baseados em distância para detecção de anomalias</h2>
-                    <p class="text-lg text-white mb-4">11:10 - Palco Secundário</p>
+                    <p class="text-lg text-white mb-4">15:40 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Enxergue a geometria da detecção de anomalias baseada em distâncias, veja sua implementação, e vislumbre suas aplicações e limitações.</p>
                     </div>
@@ -90,7 +90,14 @@
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Lucas Reis</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Lucas Reis é um pesquisador de segurança especializado em aplicações web e APIs. Com vasta experiência em pentest e desenvolvimento seguro, tem contribuído para a melhoria da segurança em diversas organizações.</p>
+                        <p class="mb-6">Lucas Reis é um analista do Centro de Excelência em Segurança Digital do Banco do Brasil, onde também atuou com Identity and Access Management e desenvolveu o modelo apresentado. 1º Tenente da reserva da FAB, faixa preta em Taekwondo, a segurança está no seu sangue. Lucas é formando em Defesa Cibernética pela XP Educação e mestrando em Informática pela Universidade de Brasília.
+                        </p>
+                        <p class="mb-6">
+                            Originalmente engenheiro mecânico, trabalhou também como escritor de RPG, personal trainer, e se encontrou na computação. Suas áreas de interesse contemplam compiladores, sistemas operacionais, computação de alta performance, computação em nuvem, inteligência artificial, e cibersegurança. Teve a maior nota do POSCOMP na sua última edição.
+                        </p>
+                        <p class="mb-6">
+                            Lucas passa seu tempo livre com sua adorável esposa e sua filha de quatro patas. Ele continua jogando RPG, e adoraria conversar com você sobre D&D 3.5 e Ars Magica. Lucas tem um canal inativo no YouTube sobre a ciência da musculação e nutrição. Descobrir o nome do canal fica como um exercício para o leitor.
+                            </p>
                     </div>
                 </div>
             </div>
