--- a/speakers/rodrigo-ferreira.html
+++ b/speakers/rodrigo-ferreira.html
@@ -81,7 +81,7 @@
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global da internet</h2>
-                    <p class="text-lg text-white mb-4">16:00h - Palco Principal</p>
+                    <p class="text-lg text-white mb-4">11:00 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Descubra os segredos por trás da internet em larga escala, explorando como sistemas autônomos se conectam e formam a espinha dorsal da rede global. Vamos mergulhar no protocolo BGP, peering, e vulnerabilidades, enquanto acompanhamos a operação real de um pequeno AS que transita entre Brasil e Londres.</p>
                     </div>
