--- a/speakers/zoziel-freire.html
+++ b/speakers/zoziel-freire.html
@@ -81,7 +81,7 @@
 
                 <div class="mb-12">
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Ransomware vs EDR: Inside the Mind of Attackers</h2>
-                    <p class="text-lg text-white mb-4">12:10 - Palco Principal</p>
+                    <p class="text-lg text-white mb-4">14:50 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Como grande objetivo, irei demonstrar que nem tudo que os EDRs se propõe a fazer eles realmente fazem. Durante toda minha pesquisa foi possível construir um ransomware para MacOS e Windows capaz de executar criptografia de arquivos, bem como persistência, troca de wallpapper, comunicação com C2 e faz bypass qualquer detecção/Bloqueio de alguns EDRs conhecidos.</p>
                     </div>
