--- a/speakers.html
+++ b/speakers.html
@@ -78,8 +78,7 @@
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Fernando Mercês</h3>
                     <p class="text-gray-300 mb-4">O que vi em dez anos como pesquisador de segurança</p>
-                    <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Abid Lohan -->
@@ -87,8 +86,7 @@
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Abid Lohan</h3>
                     <p class="text-gray-300 mb-4">Game Hacking: do Zero ao Kernel</p>
-                    <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        detalhes →</a>
+                    <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Lucas Carmo -->
@@ -96,8 +94,7 @@
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Lucas Carmo</h3>
                     <p class="text-gray-300 mb-4">The Shadow Behind Red Team Radiance</p>
-                    <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        detalhes →</a>
+                    <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- José Luiz -->
@@ -105,8 +102,7 @@
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">José Luiz</h3>
                     <p class="text-gray-300 mb-4">Malwares & EDRs</p>
-                    <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        detalhes →</a>
+                    <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Heitor Gouvêa -->
@@ -115,8 +111,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Heitor Gouvêa</h3>
                     <p class="text-gray-300 mb-4">An approach of FBP for rapid development of offensive security tools
                     </p>
-                    <a href="speakers/heitor-gouvea.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/heitor-gouvea.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Iago Blambila -->
@@ -124,18 +119,15 @@
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Iago Blambila</h3>
                     <p class="text-gray-300 mb-4">The Darkside of the Moon - How to Really Think About Anti Forensic</p>
-                    <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Nelson Brito -->
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Nelson Brito</h3>
-                    <p class="text-gray-300 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!
-                    </p>
-                    <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        detalhes →</a>
+                    <p class="text-gray-300 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
+                    <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Lucas Reis -->
@@ -144,8 +136,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Lucas Reis</h3>
                     <p class="text-gray-300 mb-4">Visualização de modelos de machine learning não-supervisionados
                         baseados em distância para detecção de anomalias</p>
-                    <a href="speakers/lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes
-                        detalhes →</a>
+                    <a href="speakers/lucas-reis.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
 
@@ -155,8 +146,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Rodrigo Ferreira</h3>
                     <p class="text-gray-300 mb-4">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global
                         da internet</p>
-                    <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Luiz Custódio -->
@@ -165,8 +155,7 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Luiz Custódio</h3>
                     <p class="text-gray-300 mb-4">AppSec Nightmares - Defeating Secure Code Review GPT Hallucinations
                     </p>
-                    <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
 
                 <!-- Pedro Sydenstricker -->
@@ -175,16 +164,22 @@
                     <h3 class="text-2xl font-bold text-white mb-2">Pedro Sydenstricker</h3>
                     <p class="text-gray-300 mb-4">Privacidade, open-source e descentralização: Nym mixnet e a próxima
                         geração de infraestrutura de privacidade</p>
-                    <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
                 <!-- Zoziel Freire -->
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Zoziel Freire</h3>
                     <p class="text-gray-300 mb-4">Ransomware vs EDR: Inside the Mind of Attackers</p>
-                    <a href="speakers/zoziel-freire.html" class="text-yellow-400 hover:text-yellow-300">Ver mais
-                        detalhes →</a>
+                    <a href="speakers/zoziel-freire.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                </div>
+
+                 <!-- Zoziel Freire -->
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2">Jefferson Macedo</h3>
+                    <p class="text-gray-300 mb-4">Persistência via Cloudf̶l̶a̶r̶e̶: Anatomia de um Ataque do Ransomware Akira</p>
+                    <a href="speakers/jefferson-macedo.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
             </div>
         </main>
