--- a/schedule.html
+++ b/schedule.html
@@ -158,10 +158,8 @@
                             <p class="font-medium text-white">Palco Fechado</p>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
-                            <p class="text-lg font-semibold text-yellow-400">09:30 - 10:10</p>
-                            <p class="font-medium text-white">Cortando o mal pela raiz: modelagem de ameaças</p>
-                            <p class="text-sm text-gray-300">Felipe Navarro</p>
-                            <a href="speakers/felipe-navarro.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="text-lg font-semibold text-yellow-400">09:30</p>
+                            <p class="font-medium text-white">Palco Fechado</p>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">10:10 - 11:00</p>
@@ -177,9 +175,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
-                            <p class="font-medium text-white">AppSec Nightmares - Defeating Secure Code Review GPT Hallucinations</p>
-                            <p class="text-sm text-gray-300">Luiz Custodio</p>
-                            <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="font-medium text-white">Cortando o mal pela raiz: modelagem de ameaças</p>
+                            <p class="text-sm text-gray-300">Felipe Navarro</p>
+                            <a href="speakers/felipe-navarro.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">12:40 - 14:00</p>
