--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 		<section id="patrocinadores" class="py-16">
 			<div class="container mx-auto px-4">
-				<h2 class="text-4xl font-bold text-center text-white mb-12">CTF</h2>
+				<h2 class="text-4xl font-bold text-center text-white mb-12">DESAFIO BUGBOUNTY</h2>
 				<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mx-auto max-w-5xl">
 					<div class="mb-16">
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
