--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 						<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
 							<a href="https://www.latam.com.br/" 
 							class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-							<img src="/images/apoiadores/latam.png" alt="LATAM" class="max-h-28">
+							<img src="/images/apoiadores/latam.jpg" alt="LATAM" class="max-h-28">
                             <a href="https://www.instagram.com/meninadecybersec/"
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/meninacybersec.jpg" alt="Menina de Cybersec" class="max-h-28">
