--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				</div>
 
 				<!-- Countdown Section -->
-				<div class="mb-12">
+				<!-- <div class="mb-12">
 					<div class="grid grid-cols-2 md:grid-cols-4 gap-4 max-w-4xl mx-auto">
 						<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-4">
 							<div id="days" class="countdown-item text-4xl md:text-5xl font-bold text-yellow-400">00
@@ -125,7 +125,7 @@
 							<div class="text-white text-lg">Segundos</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<!-- CTA Buttons -->
 				<div class="flex flex-col md:flex-row gap-6 justify-center items-center">
