removing old sponsors

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 						</a>
 					</div>
 				</div>
-
-				<!-- Countdown Section -->
-				<!-- <div class="mb-12">
+				<div class="mb-12">
 					<div class="grid grid-cols-2 md:grid-cols-4 gap-4 max-w-4xl mx-auto">
 						<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-4">
 							<div id="days" class="countdown-item text-4xl md:text-5xl font-bold text-yellow-400">00
@@ -112,14 +110,13 @@
 							<div class="text-white text-lg">Segundos</div>
 						</div>
 					</div>
-				</div> -->
+				</div>
 
-				<!-- CTA Buttons -->
 				<div class="flex flex-col md:flex-row gap-6 justify-center items-center">
-					<a href="https://www.sympla.com.br/evento/security-bsides-rio-de-janeiro-2025/2803561"
+					<a href="#"
 						target="_blank"
 						class="hero-button inline-block bg-yellow-400 text-black text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-500 transition duration-300 transform hover:scale-105">
-						Compre seu ingresso
+						Compre seu ingresso (em breve)
 					</a>
 					<a href="schedule.html"
 						class="inline-block bg-transparent border-2 border-yellow-400 text-yellow-400 text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-400 hover:text-black transition duration-300">
@@ -140,20 +137,12 @@
 								class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
 								<img src="images/patrocinadores/uva.webp" alt="UVA" class="max-h-28">
 							</a>
-							<a href="https://www.ibliss.com.br"
-								class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-								<img src="images/patrocinadores/ibliss.png" alt="iBliss" class="max-h-28">
-							</a>
 						</div>
 					</div>
 
 					<div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Ouro</h3>
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-							<a href="https://clavis.com.br/"
-								class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-								<img src="images/patrocinadores/clavis.png" alt="Clavis" class="max-h-28">
-							</a>
 							<a href="https://hakaisecurity.io"
 								class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
 								<img src="images/patrocinadores/hakai.png" alt="Hakai" class="max-h-28">
@@ -165,24 +154,11 @@
 						</div>
 					</div>
 
-					<!-- <div class="mb-16">
-						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
-						<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                            <a href="https://www.hatbash.com.br"
-                                class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300 col-span-1">
-                                <img src="images/patrocinadores/TitleLogoPurple.svg" alt="HatBash" class="max-h-28">
-                            </a>
-						</div>
-					</div> -->
 
 					<div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                             <div></div> <!-- Espaço vazio para centralizar -->
-                            <a href="https://www.hatbash.com.br"
-                                class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300 col-span-1">
-                                <img src="images/patrocinadores/TitleLogoPurple.svg" alt="HatBash" class="max-h-28">
-                            </a>
                             <div></div> <!-- Espaço vazio para centralizar -->
                         </div>
 					</div>
