--- a/speakers.html
+++ b/speakers.html
@@ -73,7 +73,7 @@
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Nelson Brito</h3>
-                    <p class="text-gray-300 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
+                    <p class="text-gray-300 mb-4">Inception — TBD</p>
                     <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
             </div>
